@startuml
entity "patient_mapping" as patient {
  **patient_uid : uuid**
  nhs_number : varchar(50)
  birth_date : date
}

entity "test_type" as test {
  **test_code : varchar(50)**
  description : text
}

entity "supplier" as supplier {
  **supplier_id : uuid**
  supplier_name : varchar(255)
  service_url : varchar(255)
  website_url : varchar(255)
  client_secret_name : varchar(255)
  client_id : varchar(255)
  oauth_token_path : varchar(255)
  order_path : varchar(255)
  oauth_scope : varchar(255)
  results_path : varchar(255)
}

entity "la_supplier_offering" as offering {
  **offering_id : uuid**
  la_code : varchar(10)
  effective_from : timestamp
  *supplier_id : uuid*
  *test_code : varchar(50)*
}

entity "test_order" as orders {
  **order_uid : uuid**
  order_reference : bigint
  *supplier_id : uuid*
  *patient_uid : uuid*
  *test_code : varchar(50)*
  originator : varchar(255)
  created_at : timestamp
}

entity "status_type" as status_type {
  **status_code : varchar(50)**
  description : text
}

entity "order_status" as order_status {
  **status_id : uuid**
  *order_uid : uuid*
  *status_code : varchar(50)*
  created_at : timestamp
  correlation_id : uuid
}

entity "result_type" as result_type {
  **result_code: varchar(50)**
  description : text
}

entity "result_status" as result_status {
  **result_id : bigint**
  *order_uid : uuid*
  *status : varchar(50)*
  created_at : timestamp
  correlation_id : uuid
}

entity "consent" as consent {
  **consent_uid : uuid**
  *order_uid : uuid*
  created_at : timestamp
}

entity "notification_audit" as notification_audit {
  **audit_id : uuid**
  message_reference : uuid
  notify_message_id : varchar(255)
  event_code : varchar(50)
  routing_plan_id : uuid
  correlation_id : uuid
  status : varchar(50)
  created_at : timestamp
  unique(message_reference, status)
}

entity "session" as session {
  **session_id : uuid**
  refresh_token_id : uuid
  nhs_access_token : text
  issuer : text
  audience : text
  subject : text
  family_name : varchar(255)
  given_name : varchar(255)
  identity_proofing_level : varchar(10)
  email : varchar(320)
  email_verified : boolean
  phone_number : varchar(20)
  phone_number_verified : boolean
  birth_date : date
  nhs_number : varchar(10)
  gp_ods_code : varchar(20)
  session_created_at : timestamp
  last_refresh_at : timestamp
  max_expires_at : timestamp
  unique(refresh_token_id)
}

entity "order_status_reminder" as order_status_reminder {
  **reminder_id : uuid**
  *order_uid : uuid*
  *trigger_status : varchar(50)*
  reminder_number : smallint
  status : reminder_status
  triggered_at : timestamp
  sent_at : timestamp
  created_at : timestamp
  unique(order_uid, trigger_status, reminder_number)
}

' Relationships
patient ||--o{ orders : "patient_uid"
supplier ||--o{ orders : "supplier_id"
test ||--o{ orders : "test_code"

supplier ||--o{ offering : "supplier_id"
test ||--o{ offering : "test_code"

orders ||--o{ order_status : "order_uid"
orders ||--o{ result_status : "order_uid"
orders ||--o| consent : "order_uid"
orders ||--o{ order_status_reminder : "order_uid"

status_type ||--o{ order_status : "status_code"
status_type ||--o{ order_status_reminder : "trigger_status"
result_type ||--o{ result_status : "status"

@enduml
